@@ -1,0 +1,1 @@
+from package1.test_module import TestClass, TestCase
