@@ -1,0 +1,2 @@
+def setup():
+    print 'package2f setup'
