@@ -19,8 +19,9 @@ from nose.config import Config
 from nose.importer import Importer, add_path, remove_path
 from nose.selector import defaultSelector, TestAddress
 from nose.util import cmp_lineno, getpackage, isclass, isgenerator, ispackage, \
-    match_last, resolve_name
+    match_last, resolve_name, transplant_func, transplant_class
 from nose.suite import ContextSuiteFactory, ContextList, LazySuite
+
 
 log = logging.getLogger(__name__)
 #log.setLevel(logging.DEBUG)
@@ -463,7 +464,9 @@ class TestLoader(unittest.TestLoader):
         
         if isinstance(obj, unittest.TestCase):
             return obj
-        elif isclass(obj):            
+        elif isclass(obj):
+            if parent and obj.__module__ != parent.__name__:
+                obj = transplant_class(obj, parent.__name__)
             if issubclass(obj, unittest.TestCase):
                 return self.loadTestsFromTestCase(obj)
             else:
@@ -479,6 +482,8 @@ class TestLoader(unittest.TestLoader):
                 else:
                     return MethodTestCase(obj)
         elif isfunction(obj):
+            if parent and obj.__module__ != parent.__name__:
+                obj = transplant_func(obj, parent.__name__)
             if isgenerator(obj):
                 return self.loadTestsFromGenerator(obj, parent)
             else:
